--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon temp.js --ext js, jsx, json --ignore ./sessions"
+    "dev": "nodemon app.js --ext js, jsx, json --ignore ./sessions"
   },
   "repository": {
     "type": "git",
